[tool.poetry]
name = "nonebot_plugin_idiom_sequence"
version = "0.1.0"
description = ""
authors = ["Jerry080801 <jerry080801@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
